# opencaret

./: .gitattributes  .gitignore  .gitmodules  Gemfile  LICENSE  README.md  _config.yml  aboutme.md  feed.xml  index.html  index.md  requirements.txt
_includes/: footer.html  head.html
_posts/: 2018-04-23-Working-Radar.md  2018-04-25-look-what-i-found-on-craigslist.md  2018-05-08-oscc-boards-are-here.md  2018-05-23-working-throttle.md
blog/: index.html
data/: .steering-data.csv.swp  .~lock.steering-processed.csv#  radar-backingout.can  radar-dump.can  radar-followingcar.can  radar-standing.can  radar-straighintowardscivic.can  rosbag_2018-08-09-20-53-59.bag  rosbag_2018-08-10-15-07-15.bag  rosbag_2018-08-10-15-08-17.bag  rosbag_2018-08-10-18-11-00.bag  rosbag_2018-08-10-18-23-58.bag  small_model  steering-data.csv  steering-data2.csv  steering-data2filtered.csv  steering-lasso-model.p  steering-lasso-model2.p  steering-processed.csv  steering-svr-model.p  steering_data_2019-01-30-15-45-33.bag  zed_rgb_image_raw_color_2018-08-10T15_08_18.142310.mpg  zed_rgb_image_raw_color_2018-08-10T18_11_01.662629.mpg  zed_rgb_image_raw_color_2018-08-10T18_24_01.274990.mpg
data/kia_soul/: camera_model.json  meshes  robot_description.urdf
data/long_test_runs/: 2018-08-10-16-23-13.bag  2018-08-10-16-27-09.bag  2018-08-10-16-31-04.bag  2018-08-10-16-33-24.bag  2018-08-10-16-34-48.bag  2018-08-10-16-35-59.bag  2018-08-10-16-43-55.bag  2018-08-10-16-44-22.bag  2018-08-10-16-48-41.bag  2018-08-10-17-00-58.bag  2018-08-10-17-08-14.bag  2018-08-10-17-09-00.bag  2018-08-10-17-41-15.bag  2018-08-10-17-44-23.bag  2018-08-10-17-50-34.bag  2018-08-10-17-57-13.bag  obstacle_at_50m-2.bag  obstacle_at_50m-3.bag  obstacle_at_50m.bag  zero_to_cruising.bag
docs/: Throttle Board BOM  _config.yml  index  index.html  index.md
docs/_layouts/: page.html
docs/_pages/: 01_about.md
ros/src/canoc/: CMakeLists.txt  setup.py
ros/src/controls/: out-model  package.xml  train-lasso.py  train-svr.py
ros/src/launch/: controls.launch  debug.launch  interface.launch  perception.launch  perception_debug.launch  rviz.launch  sim_debug.launch  zed_camera.launch  zed_video_playback.launch
ros/src/opencaret_msgs/: CMakeLists.txt  package.xml
ros/src/opencaret_msgs/msg/: CanMessage.msg  LongitudinalTarget.msg  Obstacles.msg  RoadSurface.msg
ros/src/opendbc/: package.xml  setup.py
ros/src/oscc/: package.xml  setup.py
ros/src/perception/: CMakeLists.txt  package.xml  setup.py
ros/src/perception/data/: cam_calib.p  road_transform.p  road_transform_1536.p
ros/src/perception/pretrained/decoder/: model_331.pth
ros/src/perception/pretrained/encoder/: espnet_p_2_q_8.pth  model_322.pth
ros/src/perception/src/perception/: DataSet.py  Model.py  VisualizeResults.py  curvature.ipynb  loadData.py  main.py  predict.py  video_inference.py  zed_svo_inference.py
ros/src/perception/src/perception/.ipynb_checkpoints/: curvature-checkpoint.ipynb
ros/src/radar/: setup.py
ros/src/robot_description/: CMakeLists.txt  joint_state_publisher.py
ros/src/tracker/: CMakeLists.txt
ros/src/util/: setup.py
ros1_bridge/: build.sh  source.sh
ros1_ws/src/canoc/: package.xml
ros1_ws/src/canoc/candumps/: can-radar.dump
ros1_ws/src/controls/: CMakeLists.txt  setup.py
ros1_ws/src/launch/: controls.launch  radar_playback_libav.launch  visualize.launch  zed_camera.launch  zed_libav_video_record_left.launch  zed_video_playback.launch  zed_video_record_left.launch  zed_wrapper_video_record_left.launch
ros1_ws/src/opencaret_msgs/: CMakeLists.txt  msg  package.xml
ros1_ws/src/opendbc/: CMakeLists.txt
ros1_ws/src/oscc/: CMakeLists.txt
ros1_ws/src/planner/: CMakeLists.txt  package.xml  setup.py
ros1_ws/src/radar/: CMakeLists.txt  package.xml
ros1_ws/src/robot_description/: meshes  package.xml
ros1_ws/src/tracker/: package.xml  setup.py
ros1_ws/src/util/: CMakeLists.txt  package.xml
ros1_ws/src/vehicle/: CMakeLists.txt  package.xml  setup.py
ros2_ws/: build_all.sh
ros2_ws/src/canoc/: package.xml  setup.py
ros2_ws/src/controls/: package.xml  setup.cfg  setup.py
ros2_ws/src/launch/: all_launch.py  controls_launch.py  sensors_launch.py  test_launch.py
ros2_ws/src/opencaret_msgs/: CMakeLists.txt
ros2_ws/src/opencaret_msgs/msg/: CanMessage.msg  LeadVehicle.msg  LongitudinalPlan.msg  Obstacle.msg  Obstacles.msg  RadarTrack.msg  RadarTracks.msg
ros2_ws/src/opendbc/: setup.py
ros2_ws/src/perception/: .gitattributes  setup.py
ros2_ws/src/planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/radar/: package.xml  setup.py
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/tracker/: package.xml  setup.cfg  setup.py
ros2_ws/src/tracker/tracker/: obstacle_tracker.py
ros2_ws/src/util/: package.xml
ros2_ws/src/vehicle/: package.xml  setup.cfg  setup.py
rviz/: default.rviz  ros1-radar.rviz
scripts/: can-up.sh  capture_camera.sh  controls_and_bag.sh  cool-plot.sh  enable.sh  launch_playback_ros1.sh  launch_ros1.sh  launch_ros2.sh  play_bag.sh  plot.sh  record_bag.sh  record_bag_libav.sh  ros1_bridge.sh  ros1_setup.sh  run_rviz1.sh  source_ros1.sh  source_ros2.sh  vcans.sh  visualize.sh
src/canoc/: requirements.txt  setup.cfg  setup.py
src/canoc/canoc/: receiver.py  sender.py  transceiver.py
src/launch/: all_launch.py
src/opencaret_msgs/: CMakeLists.txt  package.xml
src/opencaret_msgs/msg/: CanMessage.msg  RadarTrack.msg  RadarTrackAccel.msg  RadarTracks.msg
src/opendbc/: package.xml  setup.py
src/oscc/: package.xml  setup.py
src/perception/: .gitattributes  package.xml
src/prius_description/: CMakeLists.txt  package.xml
src/radar/: opendbc  package.xml  setup.cfg  setup.py
src/util/: setup.py
src/util/util/: util.py
(+57 files in other folders)
