<package format="2">
  <name>prius_description</name>
  <version>0.0.1</version>
  <description>
  Provides a URDF for a prius
  </description>
  <maintainer email="sloretz@openrobotics.org">shane loretz</maintainer>
  <license>APACHE 2.0</license>
<buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>urdf</build_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
