<?xml version="1.0"?>
<package format="2">
  <name>opencaret_msgs</name>
  <version>0.4.0</version>
  <description>The opencaret_msgs ROS1 package</description>
  <maintainer email="jrojas@redlinesolutions.co">Jose Rojas</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
