<?xml version="1.0"?>
<package format="2">
  <name>canoc</name>
  <version>0.0.1</version>
  <description>Can transceiver</description>
  <maintainer email="farazrkhan@gmail.com">Faraz Khan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>opencaret_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv3</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_conversions</depend>
  <depend>nodelet</depend>
</package>
