<?xml version="1.0"?>
<package format="2">
  <name>tracker</name>
  <version>0.0.1</version>
  <description>Object tracker</description>
  <maintainer email="farazrkhan@gmail.com">Faraz Khan</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>external</exec_depend>
  <exec_depend>util</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
